Retrotranslator Changelog
=================================

1.0.5 (2006-06-05)
---------------------------------
  - New -advanced option allows to override Java 1.4 methods.
  - Supported in BigDecimal: ZERO, ONE, TEN, pow(int), toPlainString(), valueOf(double), valueOf(long).
  - Supported BigDecimal.setScale(int, int) for negative scales in advanced mode.
  - Ability to process UTF-8 text files in addition to bytecode: "-srcmask *.class;*.tld".
  - getMethod(String, Class...) and getDeclaredMethod(String, Class...) are intercepted in advanced mode
    to better support generics and covariant return types on several JVM implementations, e.g. JRockit 1.4.2_08-b03.
  - Upgraded to backport-util-concurrent 2.2.
  - Deleted net.sf.retrotranslator.runtime.java.util._Collections (edu.emory.mathcs.backport.java.util.Collections is
    used instead), so retrotranslator-runtime-1.0.5.jar is NOT binary compatible with retrotranslator-runtime-1.0.4.jar.

1.0.4 (2006-04-25)
---------------------------------
  - Bug fixed: String.replace(CharSequence, CharSequence) did not work with some characters.
  - Bug fixed: NotSerializableException when serializing annotations.
  - Retrotranslator will not replace "-" by "$" in identifiers any more, e.g. in "package-info.class".

1.0.3 (2006-04-04)
---------------------------------
  - Bug fixed: NullPointerException on invisible (RetentionPolicy.CLASS) annotations
  - Supported: java.util.regex.Pattern.quote(String).

1.0.2 (2006-03-21)
---------------------------------
   - Bug fixed: exception on deserialization of enum inner classes.

1.0.1 (2006-03-13)
---------------------------------
   - Bug fixed: NullPointerException in RetrotranslatorTask
   - Access to methods emptyList(), emptyMap(), emptySet() of java.util.Collections
     is now being replaced with access to fields EMPTY_LIST, EMPTY_MAP, EMPTY_SET.

1.0.0 (2006-03-10)
---------------------------------
   - Ability to process JAR files.